Fixed footer nav overlap issue

--- a/web_app/sdlc-checklist/src/app/app.component.css
+++ b/web_app/sdlc-checklist/src/app/app.component.css
@@ -380,7 +380,7 @@ footer span {
 }
 
 footer p {
-  margin: 10px 30px;
+  margin: 10px 60px;
 }
 
 .long-bottom {
